# fan-dub-backend

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Fan Dub Backend - Complete API Copy 3.postman_collection.json  Postman_Collection.json  README.md  build.sh  docker-compose.yml  et --hard e99487b  render.yaml  requirements.txt  setup.cfg
.github/workflows/: dev-pipeline.yml
.postman/: config.json
app/: __init__.py  main.py  test_module.py
app/config/: __init__.py  database.py  settings.py
app/controllers/: __init__.py  audit_log_controller.py  auth_controller.py  clip_scene_controller.py  company_controller.py  credit_controller.py  dubbing_session_controller.py  image_profiles_controller.py  movie_controller.py  movie_search_controller.py  news_controller.py  parametrization_controller.py  plan_controller.py  saga_controller.py  transcription_controller.py
app/models/: __init__.py  audit_log.py  clip_scene_model.py  company_model.py  credit_model.py  dubbing_session_model.py  image_profiles_model.py  movie_model.py  news_model.py  parametrization_model.py  payment_model.py  plan_model.py  saga_model.py  transcription_model.py  user.py
app/services/: __init__.py  email_service.py  r2_storage_service.py
app/utils/: dependencies.py  logger.py
app/views/: __init__.py  audit_log_views.py  auth_views.py  clip_scene_views.py  company_views.py  credit_views.py  dubbing_session_views.py  image_profiles_views.py  movie_views.py  news_views.py  parametrization_views.py  plan_views.py  saga_views.py  transcription_view.py
(+1 files in other folders)
