[metadata]
name = Fan Dub Backend
version = 1.0.0
description = FastAPI backend for movie dubbing application with authentication and audit logging
author = Fan Dub Team
author_email = support@fandub.com
license = Private

[flake8]
max-line-length = 100
exclude = venv, .git, .gitignore, __pycache__, .pytest_cache, usr

[pylint]
ignore = venv,.git,.gitignore,__pycache__,.pytest_cache

[bandit]
exclude_dirs = ["venv", ".git",".gitignore","__pycache__",".pytest_cache"]

[coverage:run]
omit =
    app/config/*
    /usr/lib/*

[tool:pytest]
addopts = --maxfail=2 --disable-warnings
